<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

        <SwitchPreference
            android:defaultValue="true"
            android:key="@string/pref_title_activity_1"
            android:title="@string/pref_title_activity_1" />

        <SwitchPreference
            android:defaultValue="true"
            android:key="@string/pref_title_activity_2"
            android:title="@string/pref_title_activity_2" />

        <SwitchPreference
            android:defaultValue="true"
            android:key="@string/pref_title_activity_3"
            android:title="@string/pref_title_activity_3" />

        <SwitchPreference
            android:defaultValue="true"
            android:key="@string/pref_title_activity_4"
            android:title="@string/pref_title_activity_4" />

        <SwitchPreference
            android:defaultValue="true"
            android:key="@string/pref_title_activity_5"
            android:title="@string/pref_title_activity_5" />

        <SwitchPreference
            android:defaultValue="true"
            android:key="@string/pref_title_activity_6"
            android:title="@string/pref_title_activity_6" />

        <SwitchPreference
            android:defaultValue="true"
            android:key="@string/pref_title_activity_7"
            android:title="@string/pref_title_activity_7" />

        <SwitchPreference
            android:defaultValue="false"
            android:key="@string/pref_title_activity_8"
            android:title="@string/pref_title_activity_8" />

        <SwitchPreference
            android:defaultValue="true"
            android:key="@string/pref_title_activity_9"
            android:title="@string/pref_title_activity_9" />

        <SwitchPreference
            android:defaultValue="true"
            android:key="@string/pref_title_activity_10"
            android:title="@string/pref_title_activity_10" />

        <SwitchPreference
            android:defaultValue="true"
            android:key="@string/pref_title_activity_11"
            android:title="@string/pref_title_activity_11" />

        <SwitchPreference
            android:defaultValue="true"
            android:key="@string/pref_title_activity_12"
            android:title="@string/pref_title_activity_12" />

</PreferenceScreen>
